<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvWelcome"
        android:text="@string/label_spirit"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvBalanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_balance"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#BCBCBC"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <TextView
        android:id="@+id/tvBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textStyle="bold"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@id/tvBalanceLabel"
        app:layout_constraintTop_toBottomOf="@id/tvBalanceLabel"/>

    <TextView
        android:id="@+id/tvLabelExpense"
        android:text="@string/label_expenses"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tvBalance"
        app:layout_constraintTop_toBottomOf="@id/tvBalance"/>

    <TextView
        android:id="@+id/tvExpense"
        android:text="-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvBalance"
        app:layout_constraintTop_toBottomOf="@id/tvLabelExpense"/>

    <TextView
        android:id="@+id/tvLabelIncome"
        android:text="@string/label_income"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/tvLabelExpense"
        app:layout_constraintTop_toBottomOf="@id/tvBalance"/>

    <TextView
        android:id="@+id/tvIncome"
        android:text="-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvLabelIncome"
        app:layout_constraintTop_toBottomOf="@id/tvLabelExpense"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        app:dividerColor="#DCDCDC"
        app:layout_constraintTop_toBottomOf="@id/tvExpense"/>

    <TextView
        android:id="@+id/tvTransactionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_money_records"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#BCBCBC"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnNewSavings"
        android:src="@drawable/ic_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="-" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTransaction"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTransactionLabel"/>

</androidx.constraintlayout.widget.ConstraintLayout>